--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -576,7 +576,7 @@
                 />
               </picture>
               <div class="click-me collections-buttongrid">
-                <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">&lt; final design &gt;</a>
+                <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">&lt; the finale &gt;</a>
               </div>
             </div>
           </div> 
@@ -584,24 +584,23 @@
         <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_632,h_275/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
-              media="(min-width: 1200px) 100vw"
+              media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_50,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_489,h_200/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px) 100vw"
+              media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_240,h_150,c_fill,g_auto/allisonstock-logo_xgohg9.avif" 
-              width="240" 
-              height="150" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="297" 
+              height="148" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              loading="lazy" 
-              fetchpriority="low" 
+              loading="auto" 
               decoding="async" 
             />
 
@@ -610,16 +609,16 @@
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
             <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
             <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-            <p>
+            <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn
-              </a>, 
+                aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+              </a>, explore my 
               <a href="https://gennyallison.netlify.app"
                 target="_blank" 
                 rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+                >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
         </div>
       </div>
