--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -329,7 +329,7 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               width="160"
-              height="86"
+              height="80"
               loading="eager"
               fetchpriority="high"
               decoding="async"
@@ -423,7 +423,7 @@
           <h2 style="contain: layout paint; will-change: transform;">
             AI Content Creator & SEO Specialist Portfolio Project
           </h2>
-          <p class="lcp-title" style="font-family: system-ui, sans-serif; font-size: 1.2rem; margin: 1em 0;">
+          <p class="lcp-title" style="font-family: 'Segoe UI', sans-serif; font-size: clamp(1rem, 1.3rem, 1.8rem); text-align: left;">
             Tech Trends Blog merges creative content with cutting-edge web development. Using powerful tools like <strong>ChatGPT</strong>, <strong>Midjourney</strong>, and <strong>Relume.io</strong>, I’ve built a platform that delivers the latest in technology trends while ensuring a fast, user-friendly experience, optimized for SEO and performance across all devices.
           </p>
           <p>
@@ -631,7 +631,7 @@
         <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
         <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
         <li><a href="/pages/project1/project1-the-casestudy.html">the casestudy</a></li>
-        <li><a href="#uthor-bio">contact me</a></li>
+        <li><a href="#author-bio">contact me</a></li>
       </ul>
     </div>
     <div>
@@ -669,8 +669,8 @@
             <li><a href="/pages/about.html" class="links">about me</a></li>
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
-            <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
-            <li><a href="/pages/contact.html" class="links">contact me</a></li>
+            <li><a href="/pages/collections.html" class="links">my work</a></li> 
+            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
