--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -490,7 +490,7 @@
         <div class="vision fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1624,h_1350/v1742918096/website-design-tech-trends_xbwosg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1364/v1742918096/website-design-tech-trends_xbwosg.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -502,12 +502,12 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_528/v1742918096/website-design-tech-trends_xbwosg.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_628,h_524/v1742918096/website-design-tech-trends_xbwosg.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
               width="312"
-              height="264"
+              height="262"
               loading="auto"  
-              style="object-fit: cover;"
+              style="object-fit: contain;"
               fetchpriority="auto"
               decoding="async"
             />
