--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -407,11 +407,12 @@
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
+          
 
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="164"
             height="100"
             style="object-fit: cover;"
