--- a/pages/collections.html
+++ b/pages/collections.html
@@ -445,7 +445,7 @@
     <main class="collections-grid">
       <div class="collections-row">
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
             <h2><a href="/pages/project1/project1-intro.html">project 1</a></h2>
           </div>
           <div class="collections-container">
@@ -475,7 +475,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
           <h2><a href="/pages/project2/project2-intro.html">project 2</a></h2>
           </div>
           <div class="collections-container">
@@ -504,7 +504,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
             <h2><a href="/pages/project3/project3-intro.html">project 3</a></h2>
           </div>
           <div class="collections-container">
@@ -536,7 +536,7 @@
       </div>
       <div class="collections-row">
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
             <h2><a href="/pages/project4/project4-intro.html">project 4</a></h2>
           </div>
           <div class="collections-container">
@@ -567,7 +567,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
             <h2><a href="/pages/project5/project5-the-design.html">project 5</a></h2>
           </div>
           <div class="collections-container">
@@ -593,7 +593,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border">
+          <div class="collections-title collections-border">
             <h2><a href="/pages/project6/project6-the-design.html">project 6</a></h2>
           </div>
             <div class="collections-container">
@@ -627,7 +627,100 @@
     <div class="back-to-top">
       <button id="back-to-top" onclick="scrollToTop()">back to top</button>
     </div>
-    <div id="footer"></div>
+    <footer id="nav">
+        <div class="footer-logo">
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img       
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+              width="242"
+              height="105"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async" 
+              style-"object-fit: cover;"
+            />
+          </picture>
+        </div>
+        <div class="footer-links" id="footer-links">
+          <ul>
+            <li><a href="/index.html" class="links">my home</a></li>           
+            <li><a href="/pages/about.html" class="links">about me</a></li>
+            <li><a href="/pages/skills.html" class="links">my skills</a></li>
+            <li><a href="/pages/resume.html" class="links">my resume</a></li>
+            <li><a href="/pages/collections.html" class="links">my work</a></li> 
+            <li><a href="/pages/project3/project3-the-design.html#author-bio" class="links">contact me</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/x-bird-icon.webp" 
+                  alt="X (Twitter) logo"
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/ig-icon.webp" 
+                  alt="Instagram logo"
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/linkedin-icon.webp" 
+                  alt="LinkedIn logo"
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/github-icon.avif" 
+                  alt="GitHub logo"
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     <script src="/assets/script.js"></script>
   </body>
 </html>
